--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -974,4 +974,5 @@ var winkVideoData = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>期末任務2</p>
+<p><strong>心得:</strong></p>
+<p>期末任務一會做了之後,這個就變得比好做了,但是後面遇到了一個問題,這個分數也適用canvas做的,所以會被一起翻轉,後來看到別人用canvas翻轉文字做成特殊形狀的方式,想到把牠們分開,一開始想要只翻轉遊戲就好,但<span>restore放在哪都會出錯,就乾脆在翻轉一次後面的分數,再調整一下位子就好了.</span></p>
