--- a/content/report.html
+++ b/content/report.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務.html'>期末任務</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a><li><a href='期末任務1.html'>期末任務1</a><li><a href='期末任務2.html'>期末任務2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,8 @@ img.add_border {
 <p><a href="./../downloads/如何在網站上使用brython.pdf">Tetris 線上遊戲專案報告</a></p>
 <p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/%E5%A6%82%E4%BD%95%E5%9C%A8%E7%B6%B2%E7%AB%99%E4%B8%8A%E4%BD%BF%E7%94%A8brython.pdf" width="1000"></iframe></p>
 <p><a href="./../downloads/Tetris加入計分系統.pdf">Tetris 線上遊戲加入計分系統報告</a></p>
-<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/Tetris%E5%8A%A0%E5%85%A5%E8%A8%88%E5%88%86%E7%B3%BB%E7%B5%B1.pdf" width="1000"></iframe></p><br />tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final</div>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/Tetris%E5%8A%A0%E5%85%A5%E8%A8%88%E5%88%86%E7%B3%BB%E7%B5%B1.pdf" width="1000"></iframe></p>
+<br />tetris << <a href='tetris.html'>Previous</a> <a href='final.html'>Next</a> >> final</div>
         
     <!-- footer -->
       <div class="container">
