--- a/config/content.htm
+++ b/config/content.htm
@@ -43,7 +43,8 @@ var winkVideoData = { dataVersion: 1, frameRate: 10, buttonFrameLength: 5, butto
 </div>
 <p><strong>Week8</strong></p>
 <p>練習使用blog</p>
-<p><img alt="" height="472" src="/images/blog.png" width="1349"/></p><h2>Week9~Week12</h2>
+<p><img alt="" height="472" src="/images/blog.png" width="1349"/></p>
+<h2>Week9~Week12</h2>
 <p><strong>week10</strong></p>
 <p>利用指定的IP開啟nginx</p>
 <script>
@@ -70,7 +71,8 @@ var winkVideoData = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p><strong>Week12</strong></p>
-<p>使用學校後排不會被重製的電腦當作伺服器，並設定指定的IP。</p><h2>Week13</h2>
+<p>使用學校後排不會被重製的電腦當作伺服器，並設定指定的IP。</p>
+<h2>Week13</h2>
 <p><a href="/downloads/如何在網站上使用brython.pdf">在網站上加入brython</a>，讓方塊動起來。</p>
 <!-- 導入 brython程式庫 -->
 <script src="/static/brython.js"></script>
@@ -250,7 +252,8 @@ for i in range(5):
 browser.timer.set_interval(game, 100)
 </script>
 <div id="brython_div"></div>
-<p></p><h2>Week14</h2>
+<p></p>
+<h2>Week14</h2>
 <p>把程式存入glist，讀取舊資料，刪除沒有註冊的人。</p>
 <script src="/static/brython.js">
 </script>
@@ -384,7 +387,8 @@ class button2:
         Ace2.editor.gotoLine(0)
         Ace2.run()
 </script>
-</p><h1>midterm</h1>
+</p>
+<h1>midterm</h1>
 <p><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="/downloads/w8_project.mp4" type="video/mp4"/></video></p>
 <div class="winkVideoContainerClass">
@@ -641,11 +645,13 @@ doc.addEventListener("keydown", key_down)
 doc.addEventListener("keyup", key_up)
 browser.timer.set_interval(do_game, fps)
 </script>
-<div id="brython_div"></div><h2>report</h2>
+<div id="brython_div"></div>
+<h2>report</h2>
 <p><a href="/downloads/如何在網站上使用brython.pdf">Tetris 線上遊戲專案報告</a></p>
 <p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/%E5%A6%82%E4%BD%95%E5%9C%A8%E7%B6%B2%E7%AB%99%E4%B8%8A%E4%BD%BF%E7%94%A8brython.pdf" width="1000"></iframe></p>
 <p><a href="/downloads/Tetris加入計分系統.pdf">Tetris 線上遊戲加入計分系統報告</a></p>
-<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/Tetris%E5%8A%A0%E5%85%A5%E8%A8%88%E5%88%86%E7%B3%BB%E7%B5%B1.pdf" width="1000"></iframe></p><h1>final</h1>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/Tetris%E5%8A%A0%E5%85%A5%E8%A8%88%E5%88%86%E7%B3%BB%E7%B5%B1.pdf" width="1000"></iframe></p>
+<h1>final</h1>
 <p><a href="/downloads/finalproject.pdf">finalproject.pdf</a></p>
 <p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/finalproject.pdf" width="1000px"></iframe></p>
 <h1>w17</h1>
@@ -654,11 +660,7 @@ browser.timer.set_interval(do_game, fps)
 <p>心得:</p>
 <p>　　一開始的<span>SSH</span>與<span>IP</span>的問題對於修過課的來講，已經是輕而易舉，然後後面學到的東西卻不然，<span>wink3</span>對於要在網站上教學十分好用，<span>nginx</span>在設定也十分有用，以往在傳東西給別人，要嘛拿<span>USB</span>慢慢拉，要嗎丟雲端，這個<span>nginx</span>十分好用；由於是大四才來修，也能看得出隨身系統的更新，變得比以前更好用。</p>
 <p></p>
-<h1>期末任務</h1>
-<p><a href="https://s40723207.github.io/wcm2022/content/%E6%9C%9F%E6%9C%AB%E4%BB%BB%E5%8B%991.html">期末任務1</a></p>
-<p><a href="https://gist.github.com/s40723207/075b0972dfdf32d2c2a3b676c0f638d7">期末任務1gist</a></p>
-<p><a href="https://s40723207.github.io/wcm2022/content/%E6%9C%9F%E6%9C%AB%E4%BB%BB%E5%8B%992.html">期末任務2</a></p>
-<p><a href="https://gist.github.com/s40723207/4a0e750176c50526fbd81de7490063ba">期末任務2gist</a></p><h1>期末任務1</h1>
+<h1>期末任務1</h1>
 <script src="/static/brython.js">
 </script>
 <script src="/static/brython_stdlib.js"></script>
@@ -814,7 +816,8 @@ var winkVideoData = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p><strong>心得:</strong></p>
-<p>一開始想說去改程式裡的+ - 看可不可以實現由下至上,怎麼改都會出問題,後面想到用canvas翻轉的方式就變得很簡單。</p><h1>期末任務2</h1>
+<p>一開始想說去改程式裡的+ - 看可不可以實現由下至上,怎麼改都會出問題,後面想到用canvas翻轉的方式就變得很簡單。</p>
+<h1>期末任務2</h1>
 <script src="/static/brython.js">
 </script>
 <script src="/static/brython_stdlib.js"></script>
